--- a/.github/workflows/contribution-snake-game.yml
+++ b/.github/workflows/contribution-snake-game.yml
@@ -5,7 +5,7 @@ name: contribution-snake-game
 on:
   # run automatically every 6 hours
   schedule:
-    - cron: "*/5 * * * *" 
+    - cron: "* */3 * * *" 
   
   # allows to manually run the job at any time
   workflow_dispatch:
