--- a/.github/workflows/contribution-snake-game.yml
+++ b/.github/workflows/contribution-snake-game.yml
@@ -23,7 +23,7 @@ jobs:
     steps:
       # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
       - name: generate-snake-game-from-github-contribution-grid
-        uses: Platane/snk@v3.0.0
+        uses: actions/checkout@v3
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
@@ -38,3 +38,4 @@ jobs:
           build_dir: banners
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        
